--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                             ©Weird Bubba Studio
                         </p>
                     </div>
-                    <div class="some-extra-links small-text">
-                        <ul>
+                    <div class="small-text">
+                        <ul class="some-extra-links">
                             <li>
                                 <a href="/uses">Uses</a>
                             </li>
