--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 "@type": "WebPage",
                 "name": "We Are Weird Bubba",
                 "description": "Limited utility digital ephemera.",
-                "url": "https://weirdbubba.maxsheridan.com"
+                "url": "https://weirdbubba.maxsheridan.com",
                 "image": "https://weirdbubba.maxsheridan.com/assets/graphics/share.webp"
             }
         </script>
