--- a/uses.html
+++ b/uses.html
@@ -30,7 +30,7 @@
                 "@type": "WebPage",
                 "name": "Uses",
                 "description": "An empty page without a bunch of crap we're using to create our crap.",
-                "url": "https://weirdbubba.maxsheridan.com/uses"
+                "url": "https://weirdbubba.maxsheridan.com/uses",
                 "image": "https://weirdbubba.maxsheridan.com/assets/graphics/share.webp"
             }
         </script>
