Add og description

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png" type="image/png">
         <link rel="manifest" href="/manifest.json" type="application/json">
+        <link rel="canonical" href="https://weirdbubba.maxsheridan.com">
         <title>We are Weird Bubba</title>
         <meta name="description" content="Limited utility digital ephemera.">
-        <link rel="canonical" href="https://weirdbubba.maxsheridan.com">
         <meta name="thumbnail" content="https://weirdbubba.maxsheridan.com/assets/graphics/share.webp">
         <meta property="og:site_name" content="Weird Bubba Studio">
         <meta property="og:title" content="Weird Bubba Studio">
+        <meta property="og:description" content="Limited utility digital ephemera.">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://weirdbubba.maxsheridan.com">
         <meta property="og:image" content="https://weirdbubba.maxsheridan.com/assets/graphics/share.webp">
