--- a/max-sheridan.html
+++ b/max-sheridan.html
@@ -12,14 +12,15 @@
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png" type="image/png">
         <link rel="manifest" href="/manifest.json" type="application/json">
+        <link rel="canonical" href="https://weirdbubba.maxsheridan.com/max-sheridan">
         <title>Max Sheridan - Weird Bubba</title>
         <meta name="description" content="About Max Sheridan">
-        <link rel="canonical" href="https://weirdbubba.maxsheridan.com/uses">
         <meta name="thumbnail" content="https://weirdbubba.maxsheridan.com/assets/graphics/share.webp">
         <meta property="og:site_name" content="Weird Bubba Studio">
-        <meta property="og:title" content="Weird Bubba Studio">
+        <meta property="og:title" content="Max Sheridan">
+        <meta property="og:description" content="About Max Sheridan.">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://weirdbubba.maxsheridan.com">
+        <meta property="og:url" content="https://weirdbubba.maxsheridan.com/max-sheridan">
         <meta property="og:image" content="https://weirdbubba.maxsheridan.com/assets/graphics/share.webp">
         <meta property="og:image:type" content="image/webp">
         <meta property="og:image:width" content="720">
