--- a/uses.html
+++ b/uses.html
@@ -12,14 +12,15 @@
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png" type="image/png">
         <link rel="manifest" href="/manifest.json" type="application/json">
-        <title>Uses - Weird Bubba</title>
-        <meta name="description" content="An empty page without a bunch of crap we're using to create our crap.">
         <link rel="canonical" href="https://weirdbubba.maxsheridan.com/uses">
+        <title>Uses - Weird Bubba</title>
+        <meta name="description" content="An empty page without a bunch of crap we use to create our crap.">
         <meta name="thumbnail" content="https://weirdbubba.maxsheridan.com/assets/graphics/share.webp">
         <meta property="og:site_name" content="Weird Bubba Studio">
-        <meta property="og:title" content="Weird Bubba Studio">
+        <meta property="og:title" content="Uses">
+        <meta property="og:description" content="An empty page without a bunch of crap we use to create our crap.">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://weirdbubba.maxsheridan.com">
+        <meta property="og:url" content="https://weirdbubba.maxsheridan.com/uses">
         <meta property="og:image" content="https://weirdbubba.maxsheridan.com/assets/graphics/share.webp">
         <meta property="og:image:type" content="image/webp">
         <meta property="og:image:width" content="720">
