--- a/max-sheridan.html
+++ b/max-sheridan.html
@@ -7,7 +7,7 @@
         <meta name="color-scheme" content="light only">
         <link rel="preload" href="/assets/type/junction_bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="preload" href="/assets/type/junction.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-        <link rel="stylesheet" href="/style.min.css" type="text/css">
+        <link rel="stylesheet" href="/assets/css/style.min.css">
         <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32">
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png" type="image/png">
