--- a/max-sheridan.html
+++ b/max-sheridan.html
@@ -29,9 +29,10 @@
     <body>
         <div class="acme-all-purpose-wrapper">
             <main class="full-width">
-                <div class="backlink">
+                <div class="back">
                     <a href="/" aria-label="Weird Bubba home">
-                        <svg class="back-arrow" aria-hidden="true" viewBox="0 0 32 26.7"><path fill="currentColor" d="M32 13.37c0 .73-.6 1.33-1.33 1.33H4.55l9.73 9.72a1.33 1.33 0 1 1-1.89 1.89l-12-12a1.34 1.34 0 0 1 0-1.89l12-12a1.33 1.33 0 0 1 1.89 1.89l-9.73 9.72h26.12c.73 0 1.33.6 1.33 1.34"/></svg>Weird Bubba
+                        <svg class="arrow-lft" aria-hidden="true" viewBox="0 0 32 26.7">
+                            <path fill="currentColor" d="M32 13.37c0 .73-.6 1.33-1.33 1.33H4.55l9.73 9.72a1.33 1.33 0 1 1-1.89 1.89l-12-12a1.34 1.34 0 0 1 0-1.89l12-12a1.33 1.33 0 0 1 1.89 1.89l-9.73 9.72h26.12c.73 0 1.33.6 1.33 1.34"/></svg>Weird Bubba
                     </a>
                 </div>
                 <h1>
@@ -43,13 +44,17 @@
                 <ul class="some-extra-links margins-off">
                     <li>
                         <a href="https://maxsheridan.com" aria-label="Link to website">
-                            <svg class="icon" aria-hidden="true" viewBox="0 0 32 27.4"><path fill="currentColor" d="M31.997 8.006a7.78 7.78 0 0 1-2.285 5.286l-4.964 4.966a7.76 7.76 0 0 1-5.518 2.286h-.007c-4.279-.003-7.798-3.525-7.798-7.804q0-.109.003-.218a1.15 1.15 0 0 1 1.143-1.111c.627 0 1.143.516 1.143 1.143v.032l-.003.156c0 3.025 2.488 5.514 5.513 5.516a5.48 5.48 0 0 0 3.901-1.615l4.964-4.964a5.52 5.52 0 0 0 1.592-3.877c0-3.027-2.491-5.518-5.518-5.518a5.52 5.52 0 0 0-3.877 1.592l-1.572 1.571a1.15 1.15 0 0 1-.787.314 1.142 1.142 0 0 1-.828-1.93L18.67 2.26a7.81 7.81 0 0 1 11.042 0 7.84 7.84 0 0 1 2.285 5.746M13.285 21.923l-1.571 1.572a5.5 5.5 0 0 1-3.914 1.62c-3.025-.003-5.514-2.493-5.514-5.518 0-1.463.582-2.867 1.616-3.901l4.955-4.964a5.52 5.52 0 0 1 3.912-1.627c3.027 0 5.518 2.491 5.518 5.518q0 .083-.003.166v.032c0 .627.516 1.143 1.143 1.143.615 0 1.126-.496 1.143-1.111a7.84 7.84 0 0 0-2.286-5.737c-3.027-3.026-8.009-3.026-11.037 0L2.286 14.08A7.8 7.8 0 0 0 0 19.598c0 4.277 3.517 7.798 7.794 7.802a7.76 7.76 0 0 0 5.52-2.285l1.571-1.572a1.141 1.141 0 0 0-.871-1.882c-.266 0-.524.093-.729.262"/></svg>
+                            <svg class="icon" aria-hidden="true" viewBox="0 0 32 27.4">
+                                <path fill="currentColor" d="M31.997 8.006a7.78 7.78 0 0 1-2.285 5.286l-4.964 4.966a7.76 7.76 0 0 1-5.518 2.286h-.007c-4.279-.003-7.798-3.525-7.798-7.804q0-.109.003-.218a1.15 1.15 0 0 1 1.143-1.111c.627 0 1.143.516 1.143 1.143v.032l-.003.156c0 3.025 2.488 5.514 5.513 5.516a5.48 5.48 0 0 0 3.901-1.615l4.964-4.964a5.52 5.52 0 0 0 1.592-3.877c0-3.027-2.491-5.518-5.518-5.518a5.52 5.52 0 0 0-3.877 1.592l-1.572 1.571a1.15 1.15 0 0 1-.787.314 1.142 1.142 0 0 1-.828-1.93L18.67 2.26a7.81 7.81 0 0 1 11.042 0 7.84 7.84 0 0 1 2.285 5.746M13.285 21.923l-1.571 1.572a5.5 5.5 0 0 1-3.914 1.62c-3.025-.003-5.514-2.493-5.514-5.518 0-1.463.582-2.867 1.616-3.901l4.955-4.964a5.52 5.52 0 0 1 3.912-1.627c3.027 0 5.518 2.491 5.518 5.518q0 .083-.003.166v.032c0 .627.516 1.143 1.143 1.143.615 0 1.126-.496 1.143-1.111a7.84 7.84 0 0 0-2.286-5.737c-3.027-3.026-8.009-3.026-11.037 0L2.286 14.08A7.8 7.8 0 0 0 0 19.598c0 4.277 3.517 7.798 7.794 7.802a7.76 7.76 0 0 0 5.52-2.285l1.571-1.572a1.141 1.141 0 0 0-.871-1.882c-.266 0-.524.093-.729.262"/>
+                            </svg>
                         </a>
                     </li>
                     <li class="space" aria-hidden="true"></li>
                     <li>
                         <a href="https://substack.com/@sheridanmax" aria-label="Link to Substack profile">
-                            <svg class="icon" aria-hidden="true" viewBox="0 0 16 16"><path fill="currentColor" d="M15 3.6H1v1.9h14zM1 7.2V16l7-3.93L15 16V7.2zM15 0H1v1.89h14z"/></svg>
+                            <svg class="icon" aria-hidden="true" viewBox="0 0 16 16">
+                                <path fill="currentColor" d="M15 3.6H1v1.9h14zM1 7.2V16l7-3.93L15 16V7.2zM15 0H1v1.89h14z"/>
+                            </svg>
                         </a>
                     </li>
                 </ul>
