--- a/tug-wells.html
+++ b/tug-wells.html
@@ -29,9 +29,10 @@
     <body>
         <div class="acme-all-purpose-wrapper">
             <main class="full-width">
-                <div class="backlink">
+                <div class="back">
                     <a href="/" aria-label="Weird Bubba home">
-                        <svg class="back-arrow" aria-hidden="true" viewBox="0 0 32 26.7"><path fill="currentColor" d="M32 13.37c0 .73-.6 1.33-1.33 1.33H4.55l9.73 9.72a1.33 1.33 0 1 1-1.89 1.89l-12-12a1.34 1.34 0 0 1 0-1.89l12-12a1.33 1.33 0 0 1 1.89 1.89l-9.73 9.72h26.12c.73 0 1.33.6 1.33 1.34"/></svg>Weird Bubba
+                        <svg class="arrow-lft" aria-hidden="true" viewBox="0 0 32 26.7">
+                            <path fill="currentColor" d="M32 13.37c0 .73-.6 1.33-1.33 1.33H4.55l9.73 9.72a1.33 1.33 0 1 1-1.89 1.89l-12-12a1.34 1.34 0 0 1 0-1.89l12-12a1.33 1.33 0 0 1 1.89 1.89l-9.73 9.72h26.12c.73 0 1.33.6 1.33 1.34"/></svg>Weird Bubba
                     </a>
                 </div>
                 <h1>
