--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
         <meta name="color-scheme" content="light only">
         <link rel="preload" href="/assets/type/junction_bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="preload" href="/assets/type/junction.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-        <link rel="stylesheet" href="/assets/css/style.min.css">
+        <link rel="stylesheet" href="/assets/css/style.min.css?v=2">
         <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32">
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png" type="image/png">
@@ -17,16 +17,17 @@
     <body>
         <div class="acme-all-purpose-wrapper">
             <main>
-                <div class="flex-center">
+                <div class="flex-center space-1">
                     <h1>
                         404
                     </h1>
                     <p>Page not found</p>
-                    <p>
-                        <a href="/">
-                            weirdbubba.maxsheridan.com
-                        </a> 
-                    </p>  
+                    <div class="backlink">
+                        <a href="/" aria-label="Weird Bubba home">
+                            <svg class="arrow-lft" aria-hidden="true" viewBox="0 0 32 26.7">
+                                <path fill="currentColor" d="M32 13.37c0 .73-.6 1.33-1.33 1.33H4.55l9.73 9.72a1.33 1.33 0 1 1-1.89 1.89l-12-12a1.34 1.34 0 0 1 0-1.89l12-12a1.33 1.33 0 0 1 1.89 1.89l-9.73 9.72h26.12c.73 0 1.33.6 1.33 1.34"/></svg>Weird Bubba
+                        </a>
+                    </div>
                 </div>
             </main>
         </div>
