--- a/uses.html
+++ b/uses.html
@@ -7,7 +7,7 @@
         <meta name="color-scheme" content="light only">
         <link rel="preload" href="/assets/type/junction_bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
         <link rel="preload" href="/assets/type/junction.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-        <link rel="stylesheet" href="/assets/css/style.min.css">
+        <link rel="stylesheet" href="/assets/css/style.min.css?v=2">
         <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32">
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
         <link rel="apple-touch-icon" href="/assets/icons/apple_touch_icon.png" type="image/png">
@@ -39,7 +39,7 @@
     <body>
         <div class="acme-all-purpose-wrapper">
             <main>
-                <div class="center">
+                <div class="center space-1">
                     <h1>
                         Ha ha.
                     </h1>     
